Using font-display to make sure the page using a system font if loading fonts to prevent invisible text

--- a/components/FeaturedProjects/FeaturedProjects.module.css
+++ b/components/FeaturedProjects/FeaturedProjects.module.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 
+
 @font-face {
   font-family: "Ubuntu";
   src: url("../../public/fonts/Ubuntu-Regular.ttf");
+  font-display: swap;
 }
 
 .projects__text {
