--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -3,6 +3,7 @@
 @font-face {
   font-family: "Space Grotesk";
   src: url("../../public/fonts/SpaceGrotesk-Regular.ttf");
+  font-display: swap;
 }
 
 .home {
